<resources>
    <string name="app_name">COV 19</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_fullscreen">COVID 19</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="slide_1_title">Wash</string>
    <string name="slide_1_desc">Wash your hand for minimum 20 seconds and avoid contacts as much as possible!</string>

    <string name="slide_2_title">Qurantine</string>
    <string name="slide_2_desc">Do not get of your house until there is emergency!</string>

    <string name="slide_3_title">Isolate</string>
    <string name="slide_3_desc">Isolate yourself if you find to have any of the COVID 19 symptoms!</string>

    <string name="slide_4_title">Ignore</string>
    <string name="slide_4_desc">Ignore Fake news and follow WHO and  your governent!</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>


    <string name="base_url" translatable="false">http://api.sudishrestha.com.np/</string>
    <string name="base_url_nehr" translatable="false">http://covid19.nepalehr.org/</string>
    <string name="base_url_ninja" translatable="false">https://corona.lmao.ninja/v2/</string>
    <string name="msg_error">Something went wrong.Please try again later.</string>
    <string name="msg_progress_fetching_data">Loading...</string>
    <string name="msg_progress_posting_suspect">Reporting Suspect. Please Wait!!!</string>

    <string name="start_updates">START LOCATION UPDATES</string>


    <string name="low">None</string>
    <string name="med">medium</string>
    <string name="high">high</string>


    <string name="cough">Dry Cough</string>
    <string name="nose">Runny Nose</string>
    <string name="head">Headache</string>
    <string name="fever">High Fever</string>
    <string name="smell">Smell/Taste Loss</string>
    <string name="sore">Sore Throat</string>
    <string name="weakness">Weakness</string>
    <string name="appetite">Appetite Loss</string>
    <string name="chest">Chest Pain</string>
    <string name="breathing">Breathing Problem</string>
    <string name="dbreathing">Diff. Breathing</string>


    <string name="washHand">Wash Hand</string>
    <string name="wearMask">Wear Mask</string>
    <string name="avoidTravel">Avoid Travel</string>
    <string name="stayHome">Stay Home</string>
    <string name="isolate">Isolate</string>


    <string name="diabetes">Diabetes</string>
    <string name="BP">BP</string>
    <string name="heart">Heart</string>
    <string name="kidney">Kidney</string>
    <string name="lung">Lung </string>
    <string name="stroke">Stroke</string>
    <string name="immunity">Immunity</string>
    <string name="cancer">Cancer</string>

    <string name="none">None</string>
    <string name="information">
    Though you are in Low risk, the virus is very contagious and in this time we will suggest you to stay at home and follow the rules
\n1. Stay home
    \n2.  Stay positive
    \n3.  Drink plenty of water
    \n4.  Eat vitamin  C
    \n5.  Donot visit to you relative
    \n6.  Stay Healthy
    \n7.  Regualr home exercise
    \n8.  Take break
</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="get_last_location">GET LAST LOCATION</string>
    <string-array name="relative">
        <item>Relation</item>
        <item>Relative</item>
        <item>Friend</item>
        <item>Colleague</item>
        <item>Other</item>
    </string-array>

    <string-array name="language">
        <item>English</item>
        <item>Nepali</item>
    </string-array>


    <string name="scenario">Scenario</string>
    <string name="symptoms">Symptoms</string>
    <string name="todos">Todos</string>


    <string name="confirmed">Confirmed</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>


    <string name="splashTitle1">COVID 19 : A Challenge for Human Being</string>
    <string name="splashTitle2">TOGETHER WE CAN!!!</string>



    <string name="statSubTitle1">of total pop.</string>
    <string name="statSubTitle2">of totalc cases</string>
</resources>
